--- a/main/arobota2/param/multi_param/multi_param1/dwa_local_planner_params.yaml
+++ b/main/arobota2/param/multi_param/multi_param1/dwa_local_planner_params.yaml
@@ -23,8 +23,8 @@ DWAPlannerROS:
 
 # Goal Tolerance Parametes
   xy_goal_tolerance: 0.05
-  yaw_goal_tolerance: 0.4
-  latch_xy_goal_tolerance: true
+  yaw_goal_tolerance: 0.3
+  latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
   sim_time: 0.8
